--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .DS_Store
-.idea
+/.idea
 
-/help_info/*
-
-# Should be commented in real project usage
-/config/secrets.yml
-help_info/
+# Should be uncommented in real project usage
+# /config/secrets.yml
+/help_info
